# seeder

./: LICENSE.md  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: build.yml  main.yml
coreproject_seeder/: __init__.py  __main__.py
coreproject_seeder/tests/: test_utils.py
seeder_flet/: main.py
src/seeder_flet/: main.py
src/seeder_flet/lib/views/: login.py
tests/: conftest.py  test_cli.py
