[tool.poetry]
name = "seeder-flet"
version = "0.1.0"
description = ""
authors = ["tokitouq <suneeth.since2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.22.1"

[tool.poe.tasks]
dev = "seeder_flet.main:ft.app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
